PFM-4305 Login page & other alignment issues (#257)
* PFM-4305 Login page & other alignment issues

* PFM-4305 updated readme file

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
@@ -186,3 +186,27 @@
   }
 }
 
+
+.loginFormStyleEmployee {
+  .loginCardSubHeaderClassName {
+    text-align: center !important;
+  }
+  .loginCardClassName {
+    margin: auto !important; 
+    min-width: 408px !important;
+  }
+  .buttonClassName {
+    max-width: 100% !important;
+    width: 100% !important
+  }
+  .field .field-container .text-input input {
+    margin-bottom: 5px !important;
+  }
+  .bannerHeader {
+    margin-bottom: 0px !important;
+  }
+  
+  .primary-label-btn {
+    margin: 20px auto 0 auto !important;
+  }
+}
